fix css left tabs alignment

--- a/Frontend/app/styles/main.css
+++ b/Frontend/app/styles/main.css
@@ -1069,7 +1069,9 @@ input#search-home_value {
   margin-left: 18px; }
   .nav-tabs li {
     float: left;
-    margin-bottom: 0; }
+    margin-bottom: 0;
+    padding-right: 0;
+    padding-left: 0; }
   .nav-tabs > li.active > a,
   .nav-tabs > li.active > a:hover,
   .nav-tabs > li.active > a:focus {
@@ -1083,7 +1085,8 @@ input#search-home_value {
   .nav-tabs > li > a:focus {
     color: #008937 !important;
     background-color: #ffffff;
-    border: 0; }
+    border: 0;
+    margin-left: 16px; }
   .nav-tabs > li > a {
     padding: 10px 5px !important; }
 
@@ -1165,4 +1168,5 @@ div.tab-pane.active > div.well {
     margin-left: 0;
     border-right: solid 1px #fff;
     margin-right: -1px;
-    color: #666 !important; }
+    color: #666 !important;
+    padding-left: 15px !important; }
